build_error.txt
    Checking rustview v0.1.0 (C:\_new_ai_project\uriviewer)
warning: unused imports: `CMF_DEFAULTONLY` and `CMF_VERBSONLY`
  --> src\shell_ext.rs:19:5
   |
19 |     CMF_DEFAULTONLY, CMF_VERBSONLY, CMINVOKECOMMANDINFO, HDROP,
   |     ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Path`
 --> src\tray.rs:5:17
  |
5 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `std::str::FromStr`
 --> src\hotkeys.rs:4:5
  |
4 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

error[E0382]: use of moved value: `fonts`
  --> src\app.rs:58:32
   |
51 |         let mut fonts = egui::FontDefinitions::default();
   |             --------- move occurs because `fonts` has type `FontDefinitions`, which does not implement the `Copy` trait
...
57 |         _cc.egui_ctx.set_fonts(fonts);
   |                                ----- value moved here
58 |         _cc.egui_ctx.set_fonts(fonts);
   |                                ^^^^^ value used here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
57 |         _cc.egui_ctx.set_fonts(fonts.clone());
   |                                     ++++++++

warning: value assigned to `menu_index` is never read
   --> src\shell_ext.rs:220:21
    |
220 |                     menu_index += 1;
    |                     ^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0382`.
warning: `rustview` (lib) generated 4 warnings
error: could not compile `rustview` (lib) due to 1 previous error; 4 warnings emitted
